--- a/quicklib_setup.yml
+++ b/quicklib_setup.yml
@@ -3,6 +3,7 @@ setup:
   description: Intuitive parallel map calls for Python
   author: Yonatan Perry, Assaf Ben-David, Uri Sternfeld
   license: GNU Affero General Public License v3.0
+  url: https://github.com/Cybereason/ultima
 
   python_requires: ">=3.8"
   top_packages:
