github actions: run nightly tests only every two days

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
   pull_request:
     types: [opened, reopened]
   schedule:
-    - cron: '0 3 * * *'
+    - cron: '0 3 */2 * *'
 
 jobs:
   test:
