--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
   pull_request:
     types: [opened, reopened]
   schedule:
-    - cron: '0 3 */2 * *'
+    - cron: '20 3 5,20 * *'
 
 jobs:
   test:
@@ -41,8 +41,6 @@ jobs:
       - name: Build, install and test
         timeout-minutes: 15
         shell: bash
-        env:
-          USE_INTERNAL_CODE: "false"
         run: ./ci.sh
         continue-on-error: ${{ matrix.flag-ignore-failure }}
       - name: Archive library
